--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 jadi/machine_learning_with_python_jadi
-algorithms datascience\hw01\by_date
-algorithms datascience\hw01\itcont.txt
+algorithms datascience/hw01/by_date
+algorithms datascience/hw01/itcont.txt
