--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ jadi/machine_learning_with_python_jadi
 algorithms datascience/hw01/by_date
 algorithms datascience/hw01/itcont.txt
 jadi/recommender systems/ratings_sample.csv
+algorithms datascience/hw01/itoth.txt
