--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ algorithms datascience/hw01/by_date
 algorithms datascience/hw01/itcont.txt
 jadi/recommender systems/ratings_sample.csv
 algorithms datascience/hw01/itoth.txt
+algorithms datascience/hw05/Algorithms/Data
